# VARIANT

./: .gitignore  Dockerfile  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  README_WEB.md  Singularity.def  UNIVERSITY_DEPLOYMENT.md  UPLOAD_GUIDE.md  VIRUS_SETUP_GUIDE.md  debug_orf_none.py  debug_output.txt  debug_output2.txt  debug_output3.txt  debug_output4.txt  debug_protein_parsing.py  debug_specific.py  deploy.sh  deploy_direct.sh  deploy_singularity.sh  docker-compose.yml  environment.yaml  environment.yml  main copy.py  main.py  main_veryold.py  plot.py  pyproject.toml  railway.json  requirements.txt  requirements_web.txt  setup.py  test_complement_parsing.py  viralytics-mut  virus_config.yaml  web_app.py
.cursor/rules/: code-quality.mdc  plot-rules.mdc  python-rules.mdc
Existing-Dual-Search/: Dual_Library.py  GUIDE.md  PDB_ID.py  PDBto2D.py  README.md  convert_dbn_to_dssr.py  dualGraphs.py  dualgraph.out  list_file.txt  nrlist_3.209_all.csv  plot_dual_graph.py
Existing-Dual-Search/PDB_DBN/: 6XRZ-2D.dbn  7MLX-2D.dbn  9DID-2D.dbn  Chikungunya-2D.dbn
Existing-Dual-Search/PDB_DSSR/: 6XRZ.out  9DID.out
Existing-Dual-Search/PDB_DSSR_2D/: 9DID.txt
Existing-Dual-Search/PDB_DSSR_CT/: 6XRZ.ct  6XRZ.out  6XRZ_A.out  6XRZ_AB.ct  6XRZ_B.out  7LYJ.ct  7LYJ_A.ct  9DID.ct  9DID_A.ct  9DID_A.out  9DID_B.ct
Existing-Dual-Search/PDB_DSSR_Dual/: 6XRZ_AB.txt  9DID_B.txt
VARIANT.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/: tRNA_abundance_sample.csv
data/clustalW/: test_msa_1.txt  test_msa_2.txt
data/refs/: NC_045512.fasta  SARS-CoV-2_proteome.fasta
docs/: COMPREHENSIVE_VISUALIZATION_SUMMARY.md  PRF_ANALYSIS_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.md  README_WEB.md  plot_visualization_guide.md
examples/: prf_analysis_example.py  prf_scanner_examples.py
imgs/: README.md
plot/: COMPREHENSIVE_VISUALIZATION_SUMMARY.md  README.md  README_FIGURE.md  comprehensive_mutation_analysis.py  create_all_figures.py  figure1_workflow_overview.py  figure2_mutation_distribution.py  figure3_genome_landscape.py  figure4_protein_impact.py  figure5_hot_mutations.py  figure6_prf_sites.py  genome_organization_visualization.py
plot/tmp/: PROTEIN_VISUALIZATION_SUMMARY.md  comprehensive_mutation_analysis.py  create_all_figures.py  figure1_workflow_overview.py  figure2_mutation_distribution.py  figure3_genome_landscape.py  figure4_protein_impact.py  figure5_hot_mutations.py  figure6_prf_sites.py
result/0421/: EPI_ISL_20090675.txt  EPI_ISL_20090675_mutation_summary.csv  MT526800.txt  prf_analysis.prf_candidates.bed
result/Chikungunya/: EPI_ISL_20090675_20250807.txt  EPI_ISL_20090675_row_hot_mutations.csv  EPI_ISL_20090675_row_hot_mutations_20250807.csv  MT526800.1_20250806.txt  MT526800.1_20250807.txt  MT526800.1_Chikungunya.txt  MT526800.1_Chikungunya_mutation_summary.csv  MT526800.1_Chikungunya_row_hot_mutations.csv  MT526800.1_mutation_summary_20250807.csv  MT526800.1_row_hot_mutations_20250806.csv  MT526800.1_row_hot_mutations_20250807.csv  MT526800_mutation_summary.csv  MT526800_row_hot_mutations.csv  hChikV_Mauritius_MHW-37161_2025_EPI_ISL_20090675_2025-03-29_20250807.txt  hChikV_Mauritius_MHW-37161_2025_EPI_ISL_20090675_2025-03-29_mutation_summary_20250807.csv  hChikV_Mauritius_MHW-37161_2025_EPI_ISL_20090675_2025-03-29_row_hot_mutations_20250807.csv  potential_PRF.csv  potential_PRF_20250807.csv  prf_analysis.prf_candidates.bed  prf_analysis.prf_candidates.csv
result/HIV-1/: MW881698.1.txt  MW881698.1_20250807.txt  MW881698.1_mutation_summary.csv  MW881698.1_mutation_summary_20250807.csv  MW881698.1_row_hot_mutations.csv  MW881698.1_row_hot_mutations_20250807.csv  potential_PRF.csv  potential_PRF_20250807.csv  prf_analysis.prf_candidates.bed  prf_analysis.prf_candidates.csv
result/NewSARS/: EPI_ISL_16127650.txt  EPI_ISL_16127650_mutation_summary.csv  EPI_ISL_16127651_row_hot_mutations.csv  EPI_ISL_16127652_mutation_summary.csv  EPI_ISL_16127652_row_hot_mutations.csv  EPI_ISL_16127653.txt  EPI_ISL_16127653_mutation_summary.csv  EPI_ISL_16127654_row_hot_mutations.csv  EPI_ISL_16127657.txt  EPI_ISL_16127657_row_hot_mutations.csv  EPI_ISL_16127658.txt  EPI_ISL_16127658_row_hot_mutations.csv  EPI_ISL_16127659.txt  EPI_ISL_16127660_row_hot_mutations.csv  EPI_ISL_16283873_row_hot_mutations.csv  EPI_ISL_16283877_mutation_summary.csv  EPI_ISL_16283879_row_hot_mutations.csv  EPI_ISL_16283880.txt  EPI_ISL_16283880_row_hot_mutations.csv  EPI_ISL_16283881_row_hot_mutations.csv  EPI_ISL_16283882_row_hot_mutations.csv  EPI_ISL_16283883_row_hot_mutations.csv  EPI_ISL_16283963_row_hot_mutations.csv  EPI_ISL_16283972_mutation_summary.csv  EPI_ISL_16283975_row_hot_mutations.csv  EPI_ISL_16283979_mutation_summary.csv  EPI_ISL_16283980_row_hot_mutations.csv  EPI_ISL_16283981.txt  EPI_ISL_16283981_row_hot_mutations.csv  EPI_ISL_16283982_row_hot_mutations.csv  EPI_ISL_16283983.txt  EPI_ISL_16283986_row_hot_mutations.csv  EPI_ISL_16283987_row_hot_mutations.csv  EPI_ISL_16283989_row_hot_mutations.csv  EPI_ISL_16283990_row_hot_mutations.csv  EPI_ISL_16283991.txt  EPI_ISL_16306918.txt  EPI_ISL_16306918_row_hot_mutations.csv  EPI_ISL_16306919_row_hot_mutations.csv  EPI_ISL_16306920_row_hot_mutations.csv  (+211 more)
result/SARS-CoV-2/: EPI_ISL_16127650_20250807.txt  EPI_ISL_16127650_mutation_summary_20250807.csv  EPI_ISL_16127650_row_hot_mutations.csv  EPI_ISL_16127651.txt  EPI_ISL_16127651_20250807.txt  EPI_ISL_16127651_mutation_summary.csv  EPI_ISL_16127651_mutation_summary_20250807.csv  EPI_ISL_16127651_row_hot_mutations.csv  EPI_ISL_16127651_row_hot_mutations_20250807.csv  EPI_ISL_16127652.txt  EPI_ISL_16127652_20250807.txt  EPI_ISL_16127652_mutation_summary_20250807.csv  EPI_ISL_16127652_row_hot_mutations.csv  EPI_ISL_16127653_20250807.txt  (+608 more)
results/: analysis_jobs.json  session_virus_access.json
scripts/: __init__.py  run_prf_scan.sh  search_pdb_for_sequence.py  setup_virus_dataset.py
src/: __init__.py
templates/: index.html
tests/: __init__.py  test_mutation_detection.py  test_mutation_detector_simple.py  test_prf_analyzer.py  test_sequence_utils.py
variant/: __init__.py  cli.py
(+210 files in other folders)
