[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VARIANT"
version = "1.0.0"
description = "VARIANT: Viral mutAtion trackeR aImed At GeNome and proTein-level"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rui Wang", email = "rw3594@nyu.edu"}
]
keywords = ["bioinformatics", "virus", "mutation", "SARS-CoV-2", "PRF", "frameshifting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "biopython>=1.79",
    "more-itertools>=8.12.0",
    "fuzzysearch>=0.7.3",
    "pyyaml>=6.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
viralytics-mut = "src.cli.commands:main"

[project.urls]
Homepage = "https://github.com/yourusername/viralytics-mut"
Documentation = "https://viralytics-mut.readthedocs.io"
Repository = "https://github.com/yourusername/viralytics-mut"
Issues = "https://github.com/yourusername/viralytics-mut/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
# Ignore specific import warnings that are false positives
ignore = [
    "E402",  # Module level import not at top of file
    "F401",  # Imported but unused (false positive)
]
# Line length
line-length = 88
# Target Python version
target-version = "py38"

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "fuzzysearch.*",
    "more_itertools.*",
]
ignore_missing_imports = true 