[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VARIANT"
dynamic = ["version"]
description = "VARIANT: Viral mutAtion trackeR aImed At GeNome and proTein-level"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rui Wang", email = "rw3594@nyu.edu"}
]
maintainers = [
    {name = "Rui Wang", email = "rw3594@nyu.edu"}
]
keywords = [
    "bioinformatics", 
    "virus", 
    "mutation", 
    "genomics", 
    "proteomics",
    "SARS-CoV-2", 
    "HIV", 
    "influenza",
    "PRF", 
    "frameshifting",
    "viral-analysis",
    "mutation-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "biopython>=1.79",
    "more-itertools>=8.12.0",
    "fuzzysearch>=0.7.3",
    "pyyaml>=6.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
    "coverage>=7.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
]
all = [
    "VARIANT[dev,docs,test]"
]

[project.scripts]
variant = "variant.cli:main"

[project.urls]
Homepage = "https://github.com/wangru25/VARIANT"
Documentation = "https://github.com/wangru25/VARIANT#readme"
Repository = "https://github.com/wangru25/VARIANT"
Issues = "https://github.com/wangru25/VARIANT/issues"
Changelog = "https://github.com/wangru25/VARIANT/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/wangru25"

[project.entry-points."console_scripts"]
variant = "variant.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["src*", "variant*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | \.pytest_cache
  | \.ruff_cache
)/
'''
skip-string-normalization = true
preview = true

[tool.ruff]
# Target Python version
target-version = "py38"
# Line length
line-length = 120
# Ignore specific warnings that are false positives
ignore = [
    "E402",  # Module level import not at top of file
    "F401",  # Imported but unused (false positive)
    "E501",  # Line too long (handled by black)
    "W503",  # Line break before binary operator
    "W504",  # Line break after binary operator
]

[tool.ruff.lint]
# Enable comprehensive linting rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "LOG", # flake8-logging-format
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging
    "INP", # flake8-no-pep420
    "PTH", # flake8-use-pathlib
    "AIR", # flake8-airflow
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "ICN", # flake8-import-conventions
    "PGH", # flake8-pie
    "PLR", # flake8-pylint
    "PLW", # flake8-pylint
    "TRY", # tryceratops
    "NPY", # numpy
    "PTH", # use-pathlib
    "RSE", # raise
    "SEP", # os-sep
    "T20", # print-statements
    "YTT", # flake8-2020
]

# Allow single quotes for docstrings
docstring-quotes = "single"
# Allow single quotes for strings
quote-style = "single"
# Allow double quotes for docstrings when they contain single quotes
docstring-convention = "google"

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["variant", "src"]
known-third-party = ["biopython", "numpy", "pandas", "plotly", "matplotlib", "seaborn"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR2004", "PLR0913"]
"docs/*" = ["E501", "F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
show_absolute_path = true

# Additional strict settings
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
strict_concatenate = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "fuzzysearch.*",
    "more_itertools.*",
    "plotly.*",
    "matplotlib.*",
    "seaborn.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "*/\.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.setuptools_scm]
write_to = "src/_version.py"
fallback_version = "0.0.0"

[tool.pre-commit]
repos = [
    {
        repo = "https://github.com/pre-commit/pre-commit-hooks",
        rev = "v4.5.0",
        hooks = [
            {id = "trailing-whitespace"},
            {id = "end-of-file-fixer"},
            {id = "check-yaml"},
            {id = "check-added-large-files"},
            {id = "check-merge-conflict"},
            {id = "debug-statements"},
        ],
    },
    {
        repo = "https://github.com/psf/black",
        rev = "23.12.1",
        hooks = [{id = "black"}],
    },
    {
        repo = "https://github.com/astral-sh/ruff-pre-commit",
        rev = "v0.1.6",
        hooks = [{id = "ruff", args = ["--fix"]}],
    },
    {
        repo = "https://github.com/pre-commit/mirrors-mypy",
        rev = "v1.8.0",
        hooks = [{id = "mypy"}],
    },
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312
isolated_build = True

[testenv]
deps =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    coverage>=7.0.0
commands =
    pytest {posargs:tests}
""" 